# tldc

./: .gitignore  LICENSE.md  README.md  pyproject.toml  tldc
src/tldc/: assistant.py  clean_click.py  constants.py  context.py  db.py  dirtree.py  logger.py  main.py
src/tldc/providers/: ollama.py  xai.py
