[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldc"
version = "0.9.8"
description = "too lazy; didn't code"
readme = "README.md"
long_description_content_type = "text/markdown"
authors = [{name = "unic0rn", email = "mirek.kaim@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "xai-sdk==1.2.0",
    "click==8.3.0"
]

[project.scripts]
tldc = "tldc.main:main"